# dataclass_retro_gen

./: .gitignore  README.md  pyproject.toml
src/dataclass_retro_gen/: __init__.py  generate.py  utils.py
tests/: test_generate.py  test_utils.py
