[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dataclass_retro_gen"
authors = [{ name = "Alexandre Seris" }]
description = "Generate dataclasses from a or several dict(s)"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["dataclasses", "retro engineering"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[project.optional-dependencies]
dev = ["black==23.12.1", "mypy==1.8.0", "ruff==0.1.11", "pytest==7.4.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }


# TOOLS CONFIG

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".pytest_cache", "**/*.egg-info", "**/__pycache__", "venv"]

[tool.black]
line-length = 120
target-version = ['py310']
exclude = "\\.pytest_cache|.+\\.egg-info|__pycache__|venv/"

[tool.mypy]
python_version = "3.10"
exclude = ["\\.pytest_cache", ".+\\.egg-info", "__pycache__", "venv/"]


[tool.pytest.ini_options]
testpaths = ["tests"]
